--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,7 +7,11 @@ body {
 	color: #333;
 	background-color: #fff;
 	margin: 0;
-	padding: 2rem;
+	padding: 0 2rem;
+
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 h1 {
