--- a/static/css/card.css
+++ b/static/css/card.css
@@ -1,22 +1,54 @@
-.card-holder {
+.card-container {
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
 	align-items: stretch;
 	position: relative;
-	padding: 1rem 0;
+	/*padding: 1rem 0;*/
 }
 
-.card {
+.flip-card {
+	/*position: relative;*/
 	max-width: 71vh;
-	border-radius: 3.044vh;
-	padding: 1rem;
+	/*height: 100%;*/
 	flex: 1;
-	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
 
 	transition: transform .4s ease-out;
+	backface-visibility: hidden;
+	perspective: 1000px;
 }
 
-.card:active  {
+.flip-card-inner {
+	/*position: relative;*/
+	width: 100%;
+	height: 100%;
+	transition: transform 0.4s;
+	transform-style: preserve-3d;
+}
+
+.flip-card-inner.is-flipped {
+	transform: rotateY(-180deg);
+}
+
+.card-front, .card-back {
+	position: absolute;
+
+	width: 100%;
+	height: 100%;
+	padding: 1rem;
+
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	border-radius: 3.044vh;
+	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
+}
+
+.card-back {
 	transform: rotateY(180deg);
+}
+
+.card-content {
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
 }
