--- a/static/css/card.css
+++ b/static/css/card.css
@@ -52,3 +52,24 @@
 	height: 100%;
 	overflow-y: auto;
 }
+
+/* width */
+.card-content::-webkit-scrollbar {
+	width: 0.5rem;
+}
+
+/* Track */
+.card-content::-webkit-scrollbar-track {
+	background: #0000;
+}
+
+/* Handle */
+.card-content::-webkit-scrollbar-thumb {
+	background: #D0D0D0;
+	border-radius: 999px;
+}
+
+/* Handle on hover */
+.card-content::-webkit-scrollbar-thumb:hover {
+	background: #B8B8B8;
+}
