--- a/static/css/card.css
+++ b/static/css/card.css
@@ -41,6 +41,8 @@
 	backface-visibility: hidden;
 	border-radius: 3.044vh;
 	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15);
+	/*firefox bug with backface visibility*/
+	transform: 	rotateX(0);
 }
 
 .card-back {
@@ -51,6 +53,8 @@
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
+	scrollbar-width: thin;
+	scrollbar-color: lightgrey transparent;
 }
 
 .card-icon {
