--- a/static/css/card.css
+++ b/static/css/card.css
@@ -2,19 +2,23 @@
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
-	align-items: stretch;
-	position: relative;
 	padding: 2em 1em;
 	overflow-y: hidden;
 }
 
-.flip-card {
+.flip-card-container {
 	max-width: 71vh;
 	flex: 1;
 
 	transition: transform .4s ease-out;
 	backface-visibility: hidden;
 	perspective: 1000px;
+}
+
+.flip-card {
+	position: absolute;
+	height: 100%;
+	width: 100%;
 }
 
 .flip-card-inner {
@@ -29,8 +33,8 @@
 
 .card-front, .card-back {
 	position: absolute;
-
 	height: 100%;
+	width: 100%;
 
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -46,7 +50,6 @@
 
 .card-scroll {
 	height: 100%;
-
 	overflow-y: auto;
 	scrollbar-width: thin;
 	scrollbar-color: lightgrey transparent;
