--- a/static/css/card.css
+++ b/static/css/card.css
@@ -3,7 +3,7 @@
 	display: flex;
 	justify-content: center;
 	padding: 2em 1em;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 .flip-card-container {
@@ -19,6 +19,7 @@
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	transform-style: preserve-3d;
 }
 
 .flip-card-inner {
