--- a/static/css/card.css
+++ b/static/css/card.css
@@ -10,7 +10,9 @@
 	max-width: 71vh;
 	flex: 1;
 
-	transition: transform .4s ease-out;
+	transition-property: rotate;
+	transition-duration: .4s;
+	transition-timing-function: ease-out;
 	backface-visibility: hidden;
 	perspective: 1000px;
 }
