center card index, disable slide buttons on page load

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -87,12 +87,10 @@
 }
 
 .card-footer {
-	width: 100%;
 	position: absolute;
-	display:flex;
-	justify-content: center;
 	bottom: 0;
+	left: 50%
 }
 .page-idx {
-
+	text-align: center;
 }
