--- a/static/css/slideshow.css
+++ b/static/css/slideshow.css
@@ -27,7 +27,12 @@ button {
 	background-size: 70%;
 	border: none;
 	border-radius: 50%;
-	z-index: 1;
+	z-index: 10;
+	transition: .1s ease-out;
+}
+
+.slide-button:disabled {
+	background-color: #F0F0F0;
 }
 
 #prev {
