--- a/static/css/deck.css
+++ b/static/css/deck.css
@@ -1,15 +1,18 @@
 
 #deck-container {
 	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
+	overflow: hidden;
 }
 
 #deck-inner {
 	width: 80%;
-	padding: 0.5rem;
+	padding: 2rem 0;
 	display: flex;
 	flex-wrap: wrap;
+	overflow-y: auto;
 }
 
 .card-item {
