--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -1,10 +1,13 @@
 .navbar {
-	list-style-type: none;
+	position: fixed;
+	width: 100%;
+	height: 3rem;
+
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	list-style-type: none;
 	background-color: var(--akzentfarbe);
-	height: 3rem;
 	box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
 }
 
