--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,7 @@
 :root {
 	--akzentfarbe: #B57EDC; /* Lavendel */
 	--akzentfarbe-light: #D5B7EB;
+	--akzentfarbe-dark: #9366B2;
 	--highlight: #F0F0F0;
 }
 
@@ -14,12 +15,6 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-}
-
-#content {
-	margin-top: 3rem;
-	display: flex;
-	flex-grow: 1;
 }
 
 h1 {
@@ -52,4 +47,37 @@ p {
 	section {
 		padding: 1em 0.75em;
 	}
+}
+
+.main-btn {
+	width: 3rem;
+	height: 3rem;
+
+	border: none;
+	border-radius: 100%;
+
+	box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
+	transition: .1s ease-out;
+	z-index: 10;
+}
+
+.main-btn:enabled {
+	cursor: pointer;
+}
+
+.main-btn:hover {
+	background-color: var(--akzentfarbe-dark);
+}
+
+.main-btn:disabled {
+	background-color: var(--highlight);
+}
+
+#deck-overview {
+	position: absolute;
+	top: 1rem;
+	left: 1rem;
+
+	background: #B57EDC url(/static/css/icons/deck.svg) no-repeat center;
+	background-size: 70%;
 }
