--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 :root {
-	--akzentfarbe: #B57EDC; /* Lavendel */
-	--akzentfarbe-light: #D5B7EB;
-	--akzentfarbe-dark: #9366B2;
+	--akzentfarbe: black; /* Lavendel */
+	--akzentfarbe-light: #fc7b54;
+	--akzentfarbe-dark: #902bf5;
 	--highlight: #F0F0F0;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 h1 {
-	color: var(--akzentfarbe);
+	color: var(--akzentfarbe-light);
 	font-size: 2em;
 }
 h3 {
