decreased the font size of the h1 of card front

--- a/static/css/card.css
+++ b/static/css/card.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 :root {
 	--akzentfarbe: black; /* Lavendel */
 	--akzentfarbe-light: #fc7b54;
 	--akzentfarbe-dark: #902bf5;
 	--highlight: #F0F0F0;
+}
+
+body{
+	font-family: 'Poppins', sans-serif;
 }
 .card-container {
 	flex-grow: 1;
