--- a/static/css/index.css
+++ b/static/css/index.css
@@ -76,8 +76,8 @@ p {
 }
 
 .main-btn {
-	width: 3rem;
-	height: 3rem;
+	width: 4rem;
+	height: 4rem;
 
 	border: none;
 	border-radius: 100%;
@@ -86,6 +86,13 @@ p {
 	transition: .1s ease-out;
 	z-index: 10;
 }
+
+.center {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
 
 .main-btn:enabled {
 	cursor: pointer;
@@ -107,3 +114,22 @@ p {
 	background: #B57EDC url(./icons/deck.svg) no-repeat center;
 	background-size: 70%;
 }
+
+.action-button {
+	width: auto;
+	margin-bottom: 1em;
+	min-width: 8em;
+	cursor: pointer;
+	padding: 1em;
+	color: var(--background-color);
+	border-radius: 2%;
+	background: var(--accent-color);
+	border: 4px solid var(--button-color);
+	box-shadow: 10px 10px 0px rgba(200, 100, 0, 0.3);
+  }
+  
+  .action-button:hover {
+	box-shadow: 6px 6px 0px rgba(200,100,0,.3);
+	transform: translate(4px, 4px);
+	filter: brightness(125%);
+  }
